Added the file to the hierarchy and completed fetching the data

--- a/AppDirectory/Main.storyboard
+++ b/AppDirectory/Main.storyboard
@@ -159,7 +159,7 @@
         <!--Rooms-->
         <scene sceneID="vzj-lx-VQu">
             <objects>
-                <viewController id="4Xt-uT-zDI" customClass="RoomsViewController" customModule="DirectoryApp" sceneMemberID="viewController">
+                <viewController id="4Xt-uT-zDI" customClass="RoomsViewController" customModule="AppDirectory" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="X1G-0W-VAl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
